--- a/src/VladChange/MainBundle/Resources/views/Default/header.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Default/header.html.twig
@@ -1,2 +1,16 @@
 <header>
+    <div class="logo_wrap">
+        <a href="{{ path('vlad_change_main_homepage') }}" id="logo"></a>
+    </div>
+    <nav>
+        <ul>
+           <li><a href="#">Ссылка 1</a></li>
+           <li><a href="#">Ссылка 2</a></li>
+           <li><a href="#">Ссылка 3</a></li>
+        </ul>
+    </nav>
+    <ul class="right">
+      <li><a href="#">Регистрация</a></li>
+      <li><a href="#">Войти</a></li>
+    </ul>
 </header>
