--- a/src/VladChange/MainBundle/Resources/views/Default/page.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Default/page.html.twig
@@ -2,8 +2,11 @@
 
 {% block links %}
    {{ parent() }}
-   <link href="{{ asset('bundles/vladchangemain/css/main.css') }}" rel="stylesheet" />
-   <link href="{{ asset('bundles/vladchangemain/css/header.css') }}" rel="stylesheet" />
+   {% stylesheets
+      'bundles/vladchangemain/css/main.css'
+      'bundles/vladchangemain/css/header.css' filter='cssrewrite' %}
+      <link rel="stylesheet" href="{{ asset_url }}" />
+   {% endstylesheets %}
 {% endblock %}
 
 {% block page %}
