--- a/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
@@ -1,14 +1,11 @@
 {% extends 'VladChangeMainBundle:Default:page.html.twig' %}
 
 {% block links %}
-
-<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-<script src="{{ asset('bundles/vladchangemain/js/map.js') }}"></script>
-
+   {{ parent() }}
+   <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+   <script src="{{ asset('bundles/vladchangemain/js/map.js') }}"></script>
 {% endblock %}
 
 {% block div_main %}
-<body>
-    <div id="map" style="width: 600px; height: 400px"></div> <!-- TODO : Check style -->
-</body>
+   <div id="map" style="width: 100%; height: 400px"></div> <!-- TODO : Check style -->
 {% endblock %}
