--- a/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
@@ -7,5 +7,5 @@
 {% endblock %}
 
 {% block div_main %}
-   <div id="map" style="width: 100%; height: 400px"></div> <!-- TODO : Check style -->
+   <div id="map"></div> <!-- TODO : Check style -->
 {% endblock %}
