Email confirmation && resetting add

--- a/src/VladChange/MainBundle/Resources/views/Default/page.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Default/page.html.twig
@@ -2,9 +2,9 @@
 
 {% block links %}
    {{ parent() }}
-      <link rel="stylesheet" href="{{ 'bundles/vladchangemain/css/main.css' }}" />
-      <link rel="stylesheet" href="{{ 'bundles/vladchangemain/css/header.css' }}" />
-      <link rel="stylesheet" href="{{ 'bundles/vladchangemain/css/map.css' }}" />
+      <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/main.css') }}" />
+      <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/header.css') }}" />
+      <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/map.css') }}" />
 {% endblock %}
 
 {% block page %}
