--- a/src/VladChange/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/Profile/show.html.twig
@@ -1,5 +1,9 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-{% include "FOSUserBundle:Profile:show_content.html.twig" %}
+   <div class="fos_user_user_show">
+       <p>{{ 'profile.show.username'|trans }}: {{ user.name }}</p>
+       <p>{{ 'profile.show.username'|trans }}: {{ user.surname }}</p>
+       <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+   </div>
 {% endblock fos_user_content %}
