--- a/src/VladChange/MainBundle/Resources/public/css/header.css
+++ b/src/VladChange/MainBundle/Resources/public/css/header.css
@@ -1,6 +1,8 @@
 header {
    background: #2d2d2d;
    height: 85px;
+   z-index: 3000;
+   position: relative;
 }
 
 header div.logo_wrap {
@@ -34,7 +36,6 @@ header ul li a {
    display: block;
    font-size: 110%;
    color: white;
-   text-decoration: none;
 }
 
 header ul.right {
