--- a/src/VladChange/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -1,7 +1,5 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends 'VladChangeMainBundle:Default:page.html.twig' %}
 
-{% trans_default_domain 'FOSUserBundle' %}
-
-{% block fos_user_content %}
-<p>{{ 'resetting.password_already_requested'|trans }}</p>
-{% endblock fos_user_content %}
+{% block div_main %}
+<p>Письмо для восстановления пароля уже было выслано по указанному адресу</p>
+{% endblock %}
