--- a/src/VladChange/MainBundle/Resources/views/Default/header.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Default/header.html.twig
@@ -11,10 +11,12 @@
     </nav>
     <ul class="right">
      {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-        <li>{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |</li>
+        <li>
+            <a href="{{ path('fos_user_profile_show') }}">{{ app.user.name }} {{ app.user.surname }}</a>
+        </li>
      {% else %}
-        <li><a href="{{ path('fos_user_registration_register') }}">{{ 'layout.registration'|trans({}, 'FOSUserBundle') }}</a></li>
-        <li><a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a></li>
+        <li><a href="{{ path('fos_user_registration_register') }}">Регистрация</a></li>
+        <li><a href="{{ path('fos_user_security_login') }}">Войти</a></li>
      {% endif %}
     </ul>
 </header>
