--- a/src/VladChange/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/Registration/register.html.twig
@@ -7,7 +7,7 @@
 <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
    {{ form_widget(form) }}
    <div>
-      <input type="submit" value="{{ 'registration.submit'|trans }}" />
+      <input type="submit" value="{{ 'Подтвердить'|trans }}" />
    </div>
 </form>
 
