--- a/src/VladChange/UserBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/Resetting/reset.html.twig
@@ -1,5 +1,10 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends 'VladChangeMainBundle:Default:page.html.twig' %}
 
-{% block fos_user_content %}
-{% include "FOSUserBundle:Resetting:reset_content.html.twig" %}
-{% endblock fos_user_content %}
+{% block div_main %}
+	<form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset">
+    {{ form_widget(form) }}
+    	<div>
+        	<input type="submit" value="{{ 'Восстановить пароль'|trans }}" />
+    	</div>
+	</form>
+{% endblock %}
