Add link to the register page in login.html.twig

--- a/src/VladChange/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/Security/login.html.twig
@@ -24,5 +24,6 @@
 
    <input type="submit" id="_submit" name="_submit" value="{{ 'Войти'|trans }}" />
 </form>
+<a href="{{ path('fos_user_registration_register') }}">Регистрация</a>
 <a href="{{ path('fos_user_resetting_request') }}">Забыли пароль?</a>
 {% endblock %}
