--- a/src/VladChange/MainBundle/Resources/public/css/map.css
+++ b/src/VladChange/MainBundle/Resources/public/css/map.css
@@ -1,7 +1,7 @@
 #map {
    width: 100%;
-   height: 100vh;
-   margin-top: -85px;
+   height: 100%;
+   position: absolute;
 }
 
 .ymaps-2-1-16-copyright {
