--- a/src/VladChange/MainBundle/Resources/public/css/map_index.css
+++ b/src/VladChange/MainBundle/Resources/public/css/map_index.css
@@ -7,6 +7,7 @@
    text-align: center;
    padding: 20px;
    color: white;
+   display: none;
 }
 
 #short_info h1 {
@@ -36,4 +37,30 @@
 
 #short_info div.author a {
    color: #1e9bb3;
+}
+
+#full_info {
+   position: absolute;
+   top: 85px;
+   transform: translateX(100%);
+   left: 320px;
+   right: 0;
+   bottom: 0;
+   overflow: hidden;
+}
+
+#full_info .content {
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   background: white;
+   text-align: center;
+   color: black;
+}
+
+#wrap {
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   overflow: hidden;
 }
