--- a/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
@@ -3,18 +3,32 @@
 {% block links %}
    {{ parent() }}
    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+   <script src="{{ asset('bundles/vladchangemain/js/jquery.transform2d.js') }}"></script>
+   <script src="{{ asset('bundles/vladchangemain/js/layers.js') }}"></script>
    <script src="{{ asset('bundles/vladchangemain/js/map.js') }}"></script>
    <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/map_index.css') }}" />
 {% endblock %}
 
 {% block div_main %}
-   <div id="map"></div> <!-- TODO : Check style -->
-   <div id="short_info">
-      <h1>Арт-объект для фестиваля "Белые ночи"</h1>
-      <div class="place">ул. Светланская 54</div>
-      <div class="author">
-         <span>автор</span>
-         <a href="#">Алексей Вострицкий</a>
-      </span>
+   <div id="wrap">
+      <div id="map"></div> <!-- TODO : Check style -->
+      <div id="short_info">
+         <h1>Арт-объект для фестиваля "Белые ночи"</h1>
+         <div class="place">ул. Светланская 54</div>
+         <div class="author">
+            <span>автор</span>
+            <a href="#">Алексей Вострицкий</a>
+         </div>
+      </div>
+      <div id="full_info">
+         <div class="content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+         </div>
+      </div>
    </div>
 {% endblock %}
