--- a/src/VladChange/MainBundle/Resources/public/css/header.css
+++ b/src/VladChange/MainBundle/Resources/public/css/header.css
@@ -1,8 +1,8 @@
 header {
+   position: relative;
    background: #2d2d2d;
    height: 85px;
    z-index: 3000;
-   position: absolute;
    width: 100%;
 }
 
