--- a/src/VladChange/MainBundle/Resources/public/css/header.css
+++ b/src/VladChange/MainBundle/Resources/public/css/header.css
@@ -4,6 +4,9 @@ header {
    height: 85px;
    z-index: 3000;
    width: 100%;
+   -webkit-box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.28);
+   -moz-box-shadow:    0px 6px 10px 0px rgba(0, 0, 0, 0.28);
+   box-shadow:         0px 6px 10px 0px rgba(0, 0, 0, 0.28);
 }
 
 header div.logo_wrap {
