Add close button

--- a/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
@@ -31,9 +31,9 @@
             <a href="#">Алексей Вострицкий</a>
          </div>
       </article>
-      <div id="close_info">
+      <button id="close_info">
          Закрыть
-      </div>
+      </button>
       <article id="full_info">
          <div class="content">
             <div id="slider">
