--- a/src/VladChange/MainBundle/Resources/public/css/map_index.css
+++ b/src/VladChange/MainBundle/Resources/public/css/map_index.css
@@ -150,12 +150,13 @@
 }
 
 #close_info {
-   position: fixed;
-   top: 0px;
+   position: absolute;
+   top: 0;
    width: 200px;
    background: #6a1212;
    color: white;
    padding: 12px 8px 10px;
+   cursor: pointer;
    left: 320px;
    z-index: 999;
    text-align: center;
