--- a/src/VladChange/MainBundle/Resources/views/Default/html.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Default/html.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ru">
 <head>
-   <title>{% block title %}Измени свой владивосток{% endblock %}</title>
+   <title>{% block title %}Измени свой Владивосток{% endblock %}</title>
    <meta charset="utf-8" />
    {% include 'VladChangeMainBundle:Default:head.html.twig' %}
    {% block links %}{% endblock %}
