--- a/src/VladChange/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,8 +1,21 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
-    </div>
-</form>
+{% block links %}
+   {{ parent() }}
+   <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/edit_profile.css') }}" />
+   <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/forms.css') }}" />
+   <script src="{{ asset('bundles/vladchangemain/js/forms.js') }}"></script>
+{% endblock %}
+
+{% block div_main %}
+<div id="main_wrap">
+   <h1 class="from_top">Изменение пароля</h1><div class="block_form">
+      <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
+         {{ form_widget(form) }}
+         <div class="buttons">
+            <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+         </div>
+      </form>
+   </div>
+</div>
+{% endblock %}
