--- a/src/VladChange/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/Profile/edit.html.twig
@@ -1,13 +1,22 @@
 {% extends 'VladChangeMainBundle:Default:page.html.twig' %}
 
+{% block links %}
+   {{ parent() }}
+   <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/edit_profile.css') }}" />
+   <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/forms.css') }}" />
+   <script src="{{ asset('bundles/vladchangemain/js/forms.js') }}"></script>
+{% endblock %}
+
 {% block div_main %}
 {% trans_default_domain 'FOSUserBundle' %}
-
-<form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit">
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="ОК" />
-    </div>
-</form>
-
+<div id="main_wrap">
+   <h1 class="from_top">Изменение профиля</h1><div class="block_form">
+      <form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit">
+      {{ form_widget(form) }}
+         <div class="buttons">
+            <input type="submit" value="Сохранить" />
+         </div>
+      </form>
+   </div>
+</div>
 {% endblock %}
